--- a/lib/gits_web/controllers/page_html/host.html.heex
+++ b/lib/gits_web/controllers/page_html/host.html.heex
@@ -1,9 +1,17 @@
-<div class="grid w-full gap-20 p-4 pt-20">
-  <div>
+<div class="grid w-full gap-16 p-4 pt-20">
+  <div class="grid gap-4">
     <h1 class="w-full grow text-5xl font-bold lg:text-6xl">Host with us</h1>
     <h2 class="w-full max-w-md text-lg text-zinc-600">
-      For a seamless event ticketing and management. Enhance the event experience for promoters, and thier audiences
+      We help fans find your show and get in easily.
     </h2>
+    <div class="flex items-center gap-x-6 lg:shrink-0">
+      <a
+        href={~p"/hosts/sign-up"}
+        class="rounded-md bg-zinc-950 px-4 py-3 text-sm font-semibold text-white shadow-sm hover:bg-zinc-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-zinc-600"
+      >
+        Get started
+      </a>
+    </div>
   </div>
 
   <dl class="grid max-w-2xl grid-cols-1 gap-8 text-base leading-7 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3">
@@ -37,7 +45,7 @@
     </h2>
     <div class="flex items-center gap-x-6 lg:shrink-0">
       <a
-        href="/accounts/setup"
+        href={~p"/hosts/sign-up"}
         class="rounded-md bg-zinc-950 px-4 py-3 text-sm font-semibold text-white shadow-sm hover:bg-zinc-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-zinc-600"
       >
         Get started
