--- a/lib/gits_web/components/layouts/host_panel.html.heex
+++ b/lib/gits_web/components/layouts/host_panel.html.heex
@@ -1,14 +1,14 @@
 <.flash_group flash={@flash} />
-<div class="h-dvh grid-rows-[auto_1fr] grid gap-2 bg-white">
+<div class="grid h-dvh grid-rows-[auto_1fr] gap-2 bg-white">
   <header class="flex w-full items-center gap-4 p-2">
     <div class="flex grow">
       <.logo />
     </div>
     <div class="flex gap-4">
-      <button phx-click="help" class="size-9 inline-flex items-center justify-center rounded-lg">
+      <button phx-click="help" class="inline-flex size-9 items-center justify-center rounded-lg">
         <.icon name="hero-information-circle" />
       </button>
-      <button phx-click="close" class="size-9 inline-flex items-center justify-center rounded-lg">
+      <button phx-click="close" class="inline-flex size-9 items-center justify-center rounded-lg">
         <.icon name="hero-x-mark" />
       </button>
     </div>
