--- a/lib/gits_web/live/dashboard_live/home.html.heex
+++ b/lib/gits_web/live/dashboard_live/home.html.heex
@@ -18,7 +18,7 @@
       <.link
         :if={@account.no_invites_yet}
         navigate={~p"/accounts/#{@slug}/team/invites/new"}
-        class="block h-40 w-72 shrink-0 hover:shadow-md transition-all space-y-4 rounded-xl border p-6"
+        class="block h-40 w-72 shrink-0 space-y-4 rounded-xl border p-6 transition-all hover:shadow-md"
       >
         <span class="font-semibold">Invite your first member</span>
         <span class="grow text-sm text-zinc-500">
@@ -28,7 +28,7 @@
       <.link
         :if={@account.no_payment_method}
         navigate={~p"/accounts/#{@slug}/settings"}
-        class="h-40 block w-72 shrink-0 space-y-4 hover:shadow-md transition-all rounded-xl border p-6 *:block"
+        class="block h-40 w-72 shrink-0 space-y-4 rounded-xl border p-6 transition-all *:block hover:shadow-md"
       >
         <span class="font-semibold">Prepare for payments</span>
         <span class="grow text-sm text-zinc-500">
@@ -38,7 +38,7 @@
       <.link
         :if={@account.no_event_yet}
         navigate={~p"/accounts/#{@slug}/events/new"}
-        class="block h-40 w-72 shrink-0 space-y-4 hover:shadow-md transition-all rounded-xl border p-6"
+        class="block h-40 w-72 shrink-0 space-y-4 rounded-xl border p-6 transition-all hover:shadow-md"
       >
         <span class="font-semibold">Create your first event</span>
         <span class="grow text-sm text-zinc-500">
