--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -6,14 +6,13 @@
     </main>
     <footer class="border-t px-4 py-10">
       <div class="flex">
-        <div class="grow">
-          <.link navigate="/" class="inline-block text-xl font-black italic">
-            <img
-              src={static_path(GitsWeb.Endpoint, ~p"/images/gits_logo.png")}
-              alt="GiTS"
-              class="h-auto w-12"
-            />
-          </.link>
+        <div>
+          <div class="grow">
+            <.logo />
+          </div>
+          <p class="max-w-96 text-zinc-500 p-2 text-sm">
+            We offer better security, faster check-in, and lower costs. Whether it’s concerts, conferences, festivals, or sports events, we’ve got you covered.
+          </p>
         </div>
       </div>
       <div></div>
