--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -17,8 +17,8 @@
   <h1 class="text-5xl font-semibold md:text-6xl">
     Unlock Unforgettable Experiences
   </h1>
-  <p class="max-w-lg text-zinc-600">
-    We offer better security, faster check-in, and lower costs. Whether it’s concerts, conferences, festivals, or sports events, we’ve got you covered.
+  <p class="max-w-lg text-lg text-zinc-600">
+    Start planning and hosting your events today.
   </p>
   <div class="flex gap-8 font-medium">
     <.link
