--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -11,7 +11,7 @@
     icon: "hero-calendar-days-mini",
     current:
       Enum.any?(
-        [GitsWeb.HostLive.EventList, GitsWeb.HostLive.EventOverview],
+        [GitsWeb.HostLive.EventList, GitsWeb.HostLive.Event],
         &(&1 == @socket.view)
       ),
     href: ~p"/hosts/test/events"
@@ -19,7 +19,7 @@
 ] %>
 <aside
   id="sidebar"
-  class="fixed inset-0 bg-white z-10 lg:mx-auto lg:max-w-screen-2xl hidden h-dvh flex-col gap-8 lg:gap-12 p-2 lg:static lg:flex lg:h-auto lg:flex-row lg:items-center"
+  class="fixed inset-0 z-10 hidden h-dvh flex-col gap-8 bg-white p-2 lg:static lg:mx-auto lg:flex lg:h-auto lg:max-w-screen-2xl lg:flex-row lg:items-center lg:gap-12 lg:px-0"
 >
   <div class="inline-flex items-center justify-between lg:w-full lg:max-w-36">
     <.logo />
@@ -73,17 +73,17 @@
     </div>
   </div>
 </aside>
-<header class="flex items-center p-2 lg:p-4 mx-auto max-w-screen-2xl">
-  <h1 class="grow items-center truncate lg:p-0 text-xl font-semibold">
+<header class="mx-auto flex max-w-screen-2xl items-center p-2 lg:pt-8">
+  <h1 class="grow items-center truncate text-xl font-semibold">
     <%= assigns[:page_title] || navigation_items |> Enum.find(& &1.current) |> Map.get(:label) %>
   </h1>
   <button
-    class="flex size-9 items-center lg:hidden justify-center rounded-lg"
+    class="flex size-9 items-center justify-center rounded-lg lg:hidden"
     phx-click={JS.show(to: "#sidebar", display: "flex")}
   >
     <.icon name="hero-bars-3" />
   </button>
 </header>
-<main class="space-y-8 mx-auto max-w-screen-2xl">
+<main class="mx-auto max-w-screen-2xl space-y-8 pt-8 px-2">
   <%= @inner_content %>
 </main>
