--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<div class="mx-auto grid h-dvh max-w-screen-2xl grid-rows-[1fr_auto] overflow-hidden lg:h-auto lg:overflow-visible">
+<div class="mx-auto grid h-dvh max-w-screen-xl grid-rows-[1fr_auto] overflow-hidden lg:h-auto lg:overflow-visible">
   <div class="overflow-auto lg:overflow-visible">
     <.header current_user={@current_user} />
     <main class="mx-auto w-full max-w-screen-2xl">
