--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,5 @@
+@import url("../node_modules/quill/dist/quill.snow.css");
+
 @font-face {
   font-family: "Inter";
   src: url("/fonts/Inter_var.ttf") format("truetype-variations");
@@ -72,5 +74,6 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
 
 /* This file is for your main application CSS */
