--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -19,7 +19,7 @@
 ] %>
 <aside
   id="sidebar"
-  class="fixed inset-0 z-10 hidden h-dvh flex-col gap-8 bg-white p-2 lg:static lg:mx-auto lg:flex lg:h-auto lg:max-w-screen-2xl lg:flex-row lg:items-center lg:gap-12 lg:px-0"
+  class="fixed inset-0 z-10 hidden h-dvh flex-col gap-8 bg-white p-2 lg:static lg:mx-auto lg:flex lg:h-auto lg:max-w-screen-xl lg:flex-row lg:items-center lg:gap-12 lg:px-0"
 >
   <div class="inline-flex items-center justify-between lg:w-full lg:max-w-36">
     <.logo />
@@ -73,7 +73,7 @@
     </div>
   </div>
 </aside>
-<header class="mx-auto flex max-w-screen-2xl items-center p-2 lg:pt-8">
+<header class="mx-auto flex max-w-screen-xl items-center p-2 lg:pt-8">
   <h1 class="grow items-center truncate text-xl font-semibold">
     <%= assigns[:page_title] || navigation_items |> Enum.find(& &1.current) |> Map.get(:label) %>
   </h1>
@@ -84,6 +84,6 @@
     <.icon name="hero-bars-3" />
   </button>
 </header>
-<main class="mx-auto max-w-screen-2xl space-y-8 pt-8 px-2">
+<main class="mx-auto max-w-screen-xl space-y-8 px-2 pt-8">
   <%= @inner_content %>
 </main>
