--- a/lib/gits_web/live/host_live/event_templates/attendees.html.heex
+++ b/lib/gits_web/live/host_live/event_templates/attendees.html.heex
@@ -7,7 +7,10 @@
       </p>
     </div>
     <div class="mt-4 sm:ml-16 sm:mt-0 sm:flex-none">
-      <button class="h-9 bg-zinc-950 text-zinc-50 px-4 rounded-lg">
+      <button
+        phx-click={JS.navigate("/hosts/test/events/event_id/attendees/scannner")}
+        class="h-9 bg-zinc-950 text-zinc-50 px-4 rounded-lg"
+      >
         <span class="text-sm font-semibold">Scan ticket</span>
       </button>
     </div>
