--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -19,9 +19,9 @@
 ] %>
 <aside
   id="sidebar"
-  class="fixed inset-0 z-10 hidden h-dvh flex-col gap-8 bg-white p-2 lg:static lg:mx-auto lg:flex lg:h-auto lg:max-w-screen-xl lg:flex-row lg:items-center lg:gap-12 lg:px-0"
+  class="fixed inset-0 z-10 hidden h-dvh flex-col gap-6 bg-white p-2 lg:static lg:mx-auto lg:flex lg:h-auto lg:max-w-screen-xl lg:flex-row lg:items-center lg:px-0"
 >
-  <div class="inline-flex items-center justify-between lg:w-full lg:max-w-36">
+  <div class="inline-flex items-center justify-between">
     <.logo />
     <button
       class="inline-flex size-9 items-center justify-center lg:hidden"
@@ -30,7 +30,7 @@
       <.icon name="hero-x-mark" />
     </button>
   </div>
-  <div class="flex w-full gap-2 rounded-lg border p-4 lg:max-w-48 lg:px-3 lg:py-2">
+  <div class="flex gap-2 rounded-lg p-4 lg:px-3 lg:py-2">
     <span class="grow text-sm font-medium">Treehouse Inc</span>
     <.icon name="hero-chevron-down-mini" class="shrink-0" />
   </div>
@@ -38,6 +38,7 @@
     <.link
       :for={i <- navigation_items}
       navigate={i.href}
+      replace={true}
       class={[
         "rounded-lg p-4 gap-4 inline-flex lg:py-2",
         if(i.current,
