this is the new

--- a/lib/gits_web/live/host_live/event_templates/wizard_wrapper.html.heex
+++ b/lib/gits_web/live/host_live/event_templates/wizard_wrapper.html.heex
@@ -1,4 +1,4 @@
-<div class="items-start justify-end gap-4 lg:gap-64 grid lg:flex lg:pt-4">
+<div class="items-start lg:justify-end gap-4 lg:gap-64 grid lg:flex lg:pt-4">
   <div class="flex justify-between lg:grid lg:gap-8 lg:sticky lg:top-20">
     <%= render_slot(@steps) %>
   </div>
