--- a/lib/gits_web/controllers/user_html/tickets.html.heex
+++ b/lib/gits_web/controllers/user_html/tickets.html.heex
@@ -4,7 +4,7 @@
     <!-- <h1 class="text-xl font-semibold">My Tickets</h1> -->
     <div class="flex border-b">
       <span :for={i <- ["Coming up"]} class="px-4">
-        <span class="block border-b-2 border-zinc-500 py-4 text-sm font-medium text-zinc-400 text-zinc-700">
+        <span class="block border-b-2 border-zinc-500 py-4 text-sm font-medium text-zinc-700">
           <%= i %>
         </span>
       </span>
@@ -51,7 +51,6 @@
         <div class="grid rounded-b-2xl border-x border-b border-zinc-300 p-2">
           <div class="flex grow items-center gap-2 p-2 text-zinc-500">
             <.icon name="hero-calendar-days-micro" class="shrink-0" />
-            <span class="text-sm"><%= ticket_dates_from_event(instance.ticket.event) %></span>
           </div>
           <div class="flex grow items-center gap-2 truncate p-2 text-zinc-500">
             <.icon name="hero-map-pin-micro" class="shrink-0" />
