--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -24,7 +24,7 @@
       <div class="grid gap-4">
         <div class="flex items-start gap-2">
           <.icon name="hero-clock" class="size-5" />
-          <div class="grid">
+          <div class="grid text-zinc-700">
             <span class="text-sm"> Starts at 2:00 PM</span>
             <span class="text-sm"> Ends Sunday 13 October 2024, at 8:00 AM</span>
           </div>
@@ -44,6 +44,30 @@
             <span class="text-sm text-zinc-500">hosted by</span>
             <span class="text-sm font-medium">Treehouse Inc</span>
           </div>
+        </div>
+
+        <div class="flex items-start gap-2">
+          <.icon name="hero-banknotes" class="size-5" />
+          <div class="">
+            <span class="text-sm text-zinc-500">
+              You can <span class="font-medium text-zinc-800">get a refund</span> if:
+            </span>
+            <ul class="list-disc text-sm text-zinc-500">
+              <li class="ml-6">it's within 24 hours of buying tickets</li>
+              <li class="ml-6">this event is rescheduled or cancelled</li>
+            </ul>
+          </div>
+        </div>
+        <div class="flex flex-wrap gap-4">
+          <span
+            :for={i <- ["18+ Only", "Seminar"]}
+            class="inline-flex items-center gap-x-1.5 rounded-md px-2 py-1 text-xs font-medium text-gray-900 ring-1 ring-inset ring-gray-200"
+          >
+            <svg class="h-1.5 w-1.5 fill-zinc-900" viewBox="0 0 6 6" aria-hidden="true">
+              <circle cx="3" cy="3" r="3" />
+            </svg>
+            <%= i %>
+          </span>
         </div>
       </div>
     </div>
