--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -25,7 +25,7 @@
           <span>R 50.00</span>
         </div>
         <button
-          phx-click={JS.navigate(~p"/events/test/order/order_id")}
+          phx-click={JS.navigate(~p"/events/test/order/order_id", replace: true)}
           class="w-full rounded-lg bg-zinc-950 p-4 text-zinc-50"
         >
           <span class="font-semibold">Get tickets</span>
@@ -89,52 +89,6 @@
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda rem omnis vero, ea adipisci nulla praesentium illo magni sequi libero totam delectus voluptatum eaque repellendus soluta dicta incidunt, laudantium veniam!
       </p>
-    </div>
-  </div>
-</div>
-<div
-  :if={false}
-  class="fixed inset-0 z-20 flex max-h-dvh flex-col-reverse overflow-auto bg-black/10 lg:overflow-hidden"
->
-  <div class="relative lg:m-auto grid max-h-dvh max-w-md gap-4 overflow-auto bg-white p-4 shadow-md lg:max-w-lg lg:rounded-xl lg:p-10">
-    <div class="grid gap-4">
-      <div class="flex items-center justify-between">
-        <div class="flex items-center gap-2">
-          <span class="text-xl font-semibold">Get tickets</span>
-        </div>
-        <button class="size-9 rounded-lg lg:right-4 lg:top-4">
-          <.icon name="hero-x-mark" />
-        </button>
-      </div>
-    </div>
-    <div class="grid gap-8 border-b border-zinc-100 py-4">
-      <div :for={i <- ["Early Access", "General"]} class="grid gap-2 rounded-xl">
-        <span class="font-semibold"><%= i %></span>
-        <p class="text-sm text-zinc-500">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, tempora recusandae? Esse, harum!
-        </p>
-        <div class="flex items-center justify-between">
-          <div class="flex items-center">
-            <button class="inline-flex size-10 items-center justify-center rounded-lg border">
-              <.icon name="hero-minus" class="size-5" />
-            </button>
-            <span class="w-12 text-center text-xl font-medium tabular-nums">99</span>
-            <button class="inline-flex size-10 items-center justify-center rounded-lg border">
-              <.icon name="hero-minus" class="size-5" />
-            </button>
-          </div>
-          <span class="text-sm font-medium">R 50.00 each</span>
-        </div>
-      </div>
-    </div>
-    <div class="grid gap-4">
-      <div class="flex justify-between font-semibold">
-        <span>Total</span>
-        <span>R 100.00</span>
-      </div>
-      <button class="rounded-lg bg-zinc-950 p-4 text-zinc-50">
-        <span class="font-semibold text-sm">Confirm & Pay</span>
-      </button>
     </div>
   </div>
 </div>
