--- a/lib/gits_web/components/layouts/host_panel.html.heex
+++ b/lib/gits_web/components/layouts/host_panel.html.heex
@@ -2,7 +2,7 @@
 
 <div class="grid h-dvh grid-rows-[auto_1fr] gap-2 bg-white p-2">
   <header class="flex items-center w-full divide-x">
-    <div class="flex px-2">
+    <div class="flex pr-2">
       <button phx-click="close" class="inline-flex size-9 items-center justify-center rounded-lg">
         <.icon name="hero-x-mark" />
       </button>
