--- a/lib/gits_web/components/layouts/root.html.heex
+++ b/lib/gits_web/components/layouts/root.html.heex
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-gray-100">
+<html lang="en" class="bg-white">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -15,7 +15,7 @@
     </script>
   </head>
 
-  <body class="font-poppins min-h-dvh bg-white leading-tight antialiased dark:bg-zinc-900 dark:text-zinc-50">
+  <body class="font-poppins min-h-dvh bg-white max-w-screen-xl mx-auto leading-tight antialiased">
     <%= @inner_content %>
   </body>
 </html>
