--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -18,6 +18,7 @@
   }
 ] %>
 <aside
+  :if={false}
   id="sidebar"
   class="fixed inset-0 z-10 hidden h-dvh flex-col gap-6 bg-white p-2 lg:static lg:mx-auto lg:flex lg:h-auto lg:max-w-screen-xl lg:flex-row lg:items-center lg:gap-12 lg:p-0"
 >
@@ -83,7 +84,7 @@
     </div>
   </div>
 </aside>
-<header class="mx-auto flex max-w-screen-xl items-center p-2 lg:pt-8">
+<header :if={false} class="mx-auto flex max-w-screen-xl items-center p-2 lg:pt-8">
   <h1 class="grow items-center truncate text-xl font-semibold">
     <%= assigns[:page_title] || navigation_items |> Enum.find(& &1.current) |> Map.get(:label) %>
   </h1>
@@ -94,6 +95,6 @@
     <.icon name="hero-bars-3" />
   </button>
 </header>
-<main class="mx-auto max-w-screen-xl space-y-4 px-2 pt-8">
+<main :if={false} class="mx-auto max-w-screen-xl space-y-4 px-2 pt-8">
   <%= @inner_content %>
 </main>
