--- a/lib/gits_web/components/layouts/host_panel.html.heex
+++ b/lib/gits_web/components/layouts/host_panel.html.heex
@@ -1,6 +1,6 @@
 <.flash_group flash={@flash} />
 
-<div class="grid h-dvh grid-rows-[auto_1fr] gap-2 bg-white p-2">
+<div class="grid min-h-dvh grid-rows-[auto_1fr] gap-2 bg-white p-2">
   <header class="flex items-center w-full divide-x">
     <div class="flex pr-2">
       <button phx-click="close" class="inline-flex size-9 items-center justify-center rounded-lg">
@@ -8,10 +8,10 @@
       </button>
     </div>
     <div class="px-4">
-      <h1 class="font-medium"><%= assigns[:page_title] || "Untitled" %></h1>
+      <h2 class="font-medium text-zinc-600"><%= assigns[:page_title] || "Untitled" %></h2>
     </div>
   </header>
-  <main class="bg-white pt-12 lg:px-12">
+  <main class="bg-white max-w-screen-lg w-full grid py-12 mx-auto">
     <%= @inner_content %>
   </main>
 </div>
